--- a/src/detection/frame_differences.ipynb
+++ b/src/detection/frame_differences.ipynb
@@ -33,8 +33,8 @@
     "import cv2\n",
     "import numpy as np\n",
     "\n",
-    "before = cv2.imread('rectified/left/0.png')\n",
-    "after = cv2.imread('rectified/left/1068.png')\n",
+    "before = cv2.imread('../../rectified/left/0.png')\n",
+    "after = cv2.imread('../../rectified/left/1068.png')\n",
     "\n",
     "\n",
     "# Convert images to grayscale\n",
@@ -78,37 +78,6 @@
     "cv2.imshow('filled after',filled_after)\n",
     "cv2.waitKey(0)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "is_executing": true,
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "1. Take first frame as a reference.\n",
-    "2. For each next frame\n",
-    "3.      Find different areas comparing it with the first frame.\n",
-    "4.      Find features in stereo in the different areas.\n",
-    "5.      TODO find a way to restart the features match\n",
-    "6.      for the freature find XYZ\n",
-    "7.      Kallman filter on XYZ.\n",
-    "8.      If feature meassing then continue the point inside the convoy belt. (calculate velocity???)\n",
-    "9."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
