Fixed calibration script and clean up more

--- a/src/detection/frame_differences.ipynb
+++ b/src/detection/frame_differences.ipynb
@@ -34,7 +34,7 @@
     "import numpy as np\n",
     "\n",
     "before = cv2.imread('../../rectified/left/0.png')\n",
-    "after = cv2.imread('../../rectified/left/1068.png')\n",
+    "after = cv2.imread('rectified/left/1068.png')\n",
     "\n",
     "\n",
     "# Convert images to grayscale\n",
