--- a/src/calibration/calibration_undistortion.ipynb
+++ b/src/calibration/calibration_undistortion.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
        "Text(0.5, 1.0, 'Undistorted image for left image')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
        "Text(0.5, 1.0, 'Undistorted image for right image')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -186,27 +186,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Second problem: \n",
-    "- Rectification\n"
+    "Stereo rectification and undistortion\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'objpoints_left' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_12752\\866069353.py\u001b[0m in \u001b[0;36m<cell line: 10>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     15\u001b[0m         \u001b[0mwidth\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mimg_right\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m         \u001b[0mheight\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mimg_right\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m         \u001b[0mret_left\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmtx_left\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdist_left\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrvecs_left\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtvecs_left\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcalibrateCamera\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mobjpoints_left\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mimgpoints_left\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgray_left\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     18\u001b[0m         \u001b[0mret_right\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmtx_right\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdist_right\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrvecs_right\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtvecs_right\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcalibrateCamera\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mobjpoints_right\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mimgpoints_right\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mgray_right\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m         \u001b[0mnewcameramtx_right\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mroi_right\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgetOptimalNewCameraMatrix\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmtx_right\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mdist_right\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mw_right\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mh_right\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'objpoints_left' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "stereocalibration_flags = cv2.CALIB_FIX_INTRINSIC\n",
     "criteria = (cv2.TERM_CRITERIA_EPS + cv2.TERM_CRITERIA_MAX_ITER, 100, 0.0001)\n",
@@ -222,30 +209,15 @@
     "    img_left = cv2.imread(frame2)\n",
     "    \n",
     "    if i == 0:\n",
-    "        width = img_right.shape[1]\n",
-    "        height = img_right.shape[0]\n",
-    "        ret_left, mtx_left, dist_left, rvecs_left, tvecs_left = cv2.calibrateCamera(objpoints_left, imgpoints_left, gray_left.shape[::-1], None, None)\n",
-    "        ret_right, mtx_right, dist_right, rvecs_right, tvecs_right = cv2.calibrateCamera(objpoints_right, imgpoints_right, gray_right.shape[::-1], None, None)\n",
-    "        newcameramtx_right, roi_right = cv2.getOptimalNewCameraMatrix(mtx_right,dist_right,(w_right,h_right),0)\n",
-    "        newcameramtx_left, roi_left = cv2.getOptimalNewCameraMatrix(mtx_left,dist_left,(w_left,h_left),0)\n",
+    "        height, width = img_right.shape[:2]\n",
+    "        \n",
     "        ret, CM1, dist1, CM2, dist2, R, T, E, F = cv2.stereoCalibrate(objpoints_left, imgpoints_left, imgpoints_right, mtx_left, dist_left,\n",
     "            mtx_right, dist_right, (width, height), criteria = criteria, flags = stereocalibration_flags)\n",
+    "        \n",
     "        R1, R2, P1, P2, Q, roi1, roi2 = cv2.stereoRectify(mtx_left, dist_left, mtx_right, dist_right, (width, height), R, T)\n",
+    "       \n",
     "        map1x, map1y = cv2.initUndistortRectifyMap(mtx_left, dist_left, R1, mtx_left, (width, height), cv2.CV_32FC1)\n",
     "        map2x, map2y = cv2.initUndistortRectifyMap(mtx_right, dist_right, R1, mtx_right, (width, height), cv2.CV_32FC1)\n",
-    "        h_right,  w_right = img_right.shape[:2]\n",
-    "        h_left,  w_left = img_left.shape[:2]\n",
-    "    \n",
-    "    \n",
-    "\n",
-    "    # undistort\n",
-    "    img_right = cv2.undistort(img_right, mtx_right, dist_right, None, newcameramtx_right)  \n",
-    "\n",
-    "    #left image undistortion\n",
-    "    \n",
-    "    \n",
-    "    # undistort\n",
-    "    img_left = cv2.undistort(img_left, mtx_left, dist_left, None, newcameramtx_left)\n",
     "    \n",
     "\n",
     "    inter=cv2.INTER_LANCZOS4\n",
@@ -255,13 +227,6 @@
     "    cv2.imwrite('../../rectified_images/right/'+str(i) + \".png\", out_right)\n",
     "    i+=1\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
