--- a/src/detection/frame_differences.ipynb
+++ b/src/detection/frame_differences.ipynb
@@ -14,13 +14,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Image similarity 0.9691008087737009\n"
+      "Image similarity 0.9691248866792118\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "3"
+       "13"
       ]
      },
      "execution_count": 1,
@@ -33,8 +33,8 @@
     "import cv2\n",
     "import numpy as np\n",
     "\n",
-    "before = cv2.imread('../../rectified/left/0.png')\n",
-    "after = cv2.imread('rectified/left/1068.png')\n",
+    "before = cv2.imread('../../rectified_images/left/0.png')\n",
+    "after = cv2.imread('../../rectified_images/left/1068.png')\n",
     "\n",
     "\n",
     "# Convert images to grayscale\n",
@@ -76,7 +76,8 @@
     "cv2.imshow('diff',diff)\n",
     "cv2.imshow('mask',mask)\n",
     "cv2.imshow('filled after',filled_after)\n",
-    "cv2.waitKey(0)"
+    "cv2.waitKey(0)\n",
+    "cv2.destroyAllWindows"
    ]
   }
  ],
@@ -96,7 +97,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
