--- a/src/detection/frame_differences.ipynb
+++ b/src/detection/frame_differences.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "is_executing": true,
@@ -30,25 +30,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Image similarity 0.9691248866792118\n"
+      "Image similarity 0.980220162689235\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "13"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -56,9 +46,12 @@
     "import cv2\n",
     "import numpy as np\n",
     "\n",
-    "before = cv2.imread('../../rectified_images/left/0.png')\n",
+    "left_first = cv2.imread('../../rectified_images/left/0.png')\n",
     "after = cv2.imread('../../rectified_images/left/1068.png')\n",
     "\n",
+    "\n",
+    "left_first_cropped = crop_left(left_first)\n",
+    "after_cropped = crop_left(after)\n",
     "\n",
     "# Convert images to grayscale\n",
     "before_gray = cv2.cvtColor(left_first_cropped, cv2.COLOR_BGR2GRAY)\n",
@@ -99,137 +92,6 @@
     "cv2.imshow('diff',diff)\n",
     "cv2.imshow('mask',mask)\n",
     "cv2.imshow('filled after',filled_after)\n",
-    "cv2.waitKey(0)\n",
-    "cv2.destroyAllWindows"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "224   326\n",
-      "1191   593\n"
-     ]
-    }
-   ],
-   "source": [
-    "# importing the module\n",
-    "import cv2\n",
-    "\n",
-    "# function to display the coordinates of\n",
-    "# of the points clicked on the image\n",
-    "def click_event(event, x, y, flags, params):\n",
-    "\n",
-    "\t# checking for left mouse clicks\n",
-    "\tif event == cv2.EVENT_LBUTTONDOWN:\n",
-    "\n",
-    "\t\t# displaying the coordinates\n",
-    "\t\t# on the Shell\n",
-    "\t\tprint(x, ' ', y)\n",
-    "\n",
-    "\t\t# displaying the coordinates\n",
-    "\t\t# on the image window\n",
-    "\t\tfont = cv2.FONT_HERSHEY_SIMPLEX\n",
-    "\t\tcv2.putText(img, str(x) + ',' +\n",
-    "\t\t\t\t\tstr(y), (x,y), font,\n",
-    "\t\t\t\t\t1, (255, 0, 0), 2)\n",
-    "\t\tcv2.imshow('image', img)\n",
-    "\n",
-    "\t# checking for right mouse clicks\t\n",
-    "\tif event==cv2.EVENT_RBUTTONDOWN:\n",
-    "\n",
-    "\t\t# displaying the coordinates\n",
-    "\t\t# on the Shell\n",
-    "\t\tprint(x, ' ', y)\n",
-    "\n",
-    "\t\t# displaying the coordinates\n",
-    "\t\t# on the image window\n",
-    "\t\tfont = cv2.FONT_HERSHEY_SIMPLEX\n",
-    "\t\tb = img[y, x, 0]\n",
-    "\t\tg = img[y, x, 1]\n",
-    "\t\tr = img[y, x, 2]\n",
-    "\t\tcv2.putText(img, str(b) + ',' +\n",
-    "\t\t\t\t\tstr(g) + ',' + str(r),\n",
-    "\t\t\t\t\t(x,y), font, 1,\n",
-    "\t\t\t\t\t(255, 255, 0), 2)\n",
-    "\t\tcv2.imshow('image', img)\n",
-    "\n",
-    "# driver function\n",
-    "if __name__==\"__main__\":\n",
-    "\n",
-    "\t# reading the image\n",
-    "\timg = cv2.imread('../../rectified_images/right/0.png', 1)\n",
-    "\n",
-    "\t# displaying the image\n",
-    "\tcv2.imshow('image', img)\n",
-    "\n",
-    "\t# setting mouse handler for the image\n",
-    "\t# and calling the click_event() function\n",
-    "\tcv2.setMouseCallback('image', click_event)\n",
-    "\n",
-    "\t# wait for a key to be pressed to exit\n",
-    "\tcv2.waitKey(0)\n",
-    "\n",
-    "\t# close the window\n",
-    "\tcv2.destroyAllWindows()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def crop_rect(img, rect):\n",
-    "    # get the parameter of the small rectangle\n",
-    "    center, size, angle = rect[0], rect[1], rect[2]\n",
-    "    center, size = tuple(map(int, center)), tuple(map(int, size))\n",
-    "\n",
-    "    # get row and col num in img\n",
-    "    height, width = img.shape[0], img.shape[1]\n",
-    "\n",
-    "    # calculate the rotation matrix\n",
-    "    M = cv2.getRotationMatrix2D(center, angle, 1)\n",
-    "    # rotate the original image\n",
-    "    img_rot = cv2.warpAffine(img, M, (width, height))\n",
-    "\n",
-    "    # now rotated rectangle becomes vertical, and we crop it\n",
-    "    img_crop = cv2.getRectSubPix(img_rot, size, center)\n",
-    "\n",
-    "    return img_crop, img_rot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import cv2\n",
-    "import numpy as np\n",
-    "\n",
-    "# read image\n",
-    "img = cv2.imread('../../rectified_images/right/0.png')\n",
-    "\n",
-    "# draw filled circle in white on black background as mask\n",
-    "mask = np.zeros_like(img)\n",
-    "#for left first image\n",
-    "#mask = cv2.rectangle(mask,(360,290),(1273,684),(255,255,255),-1)\n",
-    "#for right first image\n",
-    "mask = cv2.rectangle(mask,(240,300),(1186,700),(255,255,255),-1)\n",
-    "# apply mask to image\n",
-    "result = cv2.bitwise_and(img, mask)\n",
-    "\n",
-    "# save results\n",
-    "cv2.imwrite('jeep_mask.png', mask)\n",
-    "cv2.imwrite('jeep_masked.png', result)\n",
-    "\n",
-    "cv2.imshow('masked image', result)\n",
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()"
    ]
